--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,11 @@
-html {
+html,
+body,
+file-drop,
+#app {
 	height: 100%;
 }
 
 body {
-	height: 100%;
 	box-sizing: border-box;
 	background: #fdfdfd;
 	color: #202020;
