--- a/src/base.css
+++ b/src/base.css
@@ -16,6 +16,7 @@ body {
 
 	background: var(--surface-color);
 	color: var(--on-surface-color);
+	accent-color: var(--primary-color);
 	margin: 0;
 	position: relative;
 	font-family: 'Roboto Flex', sans-serif;
